--- a/docker/services/frontend/html/config-data.html
+++ b/docker/services/frontend/html/config-data.html
@@ -2039,7 +2039,7 @@
                 <h3 class="modal-title" id="live-data-modal-title">Live-Daten</h3>
                 <button class="modal-close" onclick="closeLiveDataModal()">&times;</button>
             </div>
-            <div style="padding: 1rem; overflow-y: auto; max-height: calc(90vh - 80px);">
+            <div style="padding: 1rem;">
                 <div id="live-data-content">
                     <div class="loading"><div class="spinner"></div><br>Lade Live-Daten...</div>
                 </div>
@@ -3871,7 +3871,7 @@
                 <!-- Timestamp Info -->
                 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 1rem; margin-bottom: 1rem;">
                     <div style="background: rgba(33, 150, 243, 0.1); border-radius: 8px; padding: 0.75rem; text-align: center;">
-                        <div style="color: #2196f3; font-weight: bold; margin-bottom: 0.25rem;">&#128202; EasyInsight</div>
+                        <div style="color: #2196f3; font-weight: bold; margin-bottom: 0.25rem;">&#128202; EasyInsight${ei?.symbol_used ? ` (${ei.symbol_used})` : ''}</div>
                         <div style="color: #888; font-size: 0.8rem;">${ei?.snapshot_time_display || 'Keine Daten'}</div>
                     </div>
                     <div style="background: rgba(156, 39, 176, 0.1); border-radius: 8px; padding: 0.75rem; text-align: center;">
